<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">calorieCalc</string>
    <string name="txt_length">Duracion</string>
    <string name="txt_calories">Calorias</string>
    <string name="lbl_speed">Velocidad</string>
    <string name="eula_title">Licencia</string>
    <string name="eula_accept">Aceptar</string>
    <string name="eula_refuse">Cancelar</string>
    <string name="txt_username">Username:</string>
    <string name="txt_password">Password:</string>
    <string name="link_forgot_password">He olvidado mi password</string>
    <string name="txt_weight">Peso:</string>
    <string name="txt_height">Altura:</string>
    <string name="txt_sex">Sexo:</string>
    <string name="txt_dob">Fecha de Nacimiento:</string>
    <string name="radio_sex_man">Hombre</string>
    <string name="radio_sex_woman">Mujer</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_configure">Ajustes</string>
    <string name="btn_user_settings">Mi Cuenta</string>
    <string name="btn_terminar">Finalizar</string>
    <string name="btn_back_to_main">Otra actividad</string>
    <string name="btn_salir">Salir</string>
    <string name="btn_stats">Estadisticas</string>
    <string name="btn_history">Historico</string>
    <string name="btn_login">Login</string>
    <string name="activity_selector_txt_summary">Selecciona tu actividad y comienza el ejercicio!</string>
    <string name="activity_selector_btn_andar">Caminar</string>
    <string name="activity_selector_btn_correr">Correr</string>
    <string name="activity_selector_btn_patinar">Patinar</string>
    <string name="activity_selector_btn_bicicleta">Bicicleta</string>
    <string name="enabledisablegps_title">Habilita/Desahabilita Redes</string>
    <string name="enabledisablegps_summary">Habilita/deshabilita proveedores desde los ajustes de su telefono.</string>
    <string name="txt_current_location">Ubicacion actual</string>
    <string name="txt_calories_burned">Calorias quemadas</string>
    <string name="txt_distance_travelled">Distancia recorrida</string>
    <string name="txt_provider_status">Estado de la conexion</string>
    <string name="txt_enter_height">Introduce tu altura (m)</string>
    <string name="txt_enter_dob">Introduce tu fecha de nacimiento</string>
    <string name="txt_enter_weight">Introduce tu peso en Kg</string>
    <string name="btn_next">Continuar</string>
    <string name="btn_workout_vs_type">Ejercicio por tipo</string>
    <string name="btn_speed_vs_time">Velocidad vs Tiempo</string>
    <string name="btn_weight_vs_date">Peso vs Fecha</string>
    <string name="btn_min_max_cur_weight">Peso Saludable</string>
    <string name="btn_top_speed_vs_date_vs_type">Velocidades Maximas</string>
    <string name="btn_top_kcal_vs_date_vs_type">Kcal quemadas</string>
    <string name="txt_stats_title">Mide tu progreso y descubre tus mejores tiempos</string>
    <string name="register.title">Regístrate</string>
    <string name="register.msg">Dinos quien eres para comenzar a usar calorieCalc.</string>
    <string name="register.next">Continuar</string>
    <string name="register.cancel">Cancelar</string>
    <string name="user_settings.title">Confirma tus datos</string>
    <string name="user_settings.ok">Continuar</string>
    <string name="user_settings.ko">Modificar</string>
	<string name="txt_secret_question">Pregunta Secreta</string>
	<string name="txt_secret_question_detail">Una pregunta de la que solo tú conoces la respuesta</string>
    <string name="txt_hint_check">Respuesta</string>
    <string name="txt_hint_check_detail">Se utilizará en caso de necesitar resetear el password</string>
	<string name="mandatory_fields">Todos los campos son obligatorios</string>
	<string name="txt_loginRequired">Habilitar/Deshabilitar pantalla de Login</string>
    <string name="txt_no_items">Aun no tienes ejercicios guardados.</string>
    <string name="img_description">CalorieCalc logo</string>
	
</resources>