<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">
	<TableRow android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/activity_selector_row_summary">
		<TextView android:id="@+id/activity_selector_txt_summary"
			android:text="@string/activity_selector_txt_summary"
			android:layout_height="wrap_content" android:layout_width="wrap_content"
			android:textSize="20dip" android:layout_marginBottom="30dip"></TextView>
	</TableRow>
	<TableRow android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/activity_selector_row_walk">
		<Button android:layout_height="wrap_content" android:textSize="20dip"
			android:layout_width="fill_parent" android:id="@+id/activity_selector_btn_caminar"
			android:text="@string/activity_selector_btn_andar"></Button>
	</TableRow>
	<TableRow android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/activity_selector_row_run">
		<Button android:layout_height="wrap_content" android:textSize="20dip"
			android:layout_width="fill_parent" android:id="@+id/activity_selector_btn_correr"
			android:text="@string/activity_selector_btn_correr"></Button>
	</TableRow>
	<TableRow android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/activity_selector_row_skate">
		<Button android:layout_height="wrap_content" android:textSize="20dip"
			android:layout_width="fill_parent" android:id="@+id/activity_selector_btn_patinar"
			android:text="@string/activity_selector_btn_patinar"></Button>
	</TableRow>
	<TableRow android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/activity_selector_row_bike">
		<Button android:layout_height="wrap_content" android:textSize="20dip"
			android:layout_width="fill_parent" android:id="@+id/activity_selector_btn_bicicleta"
			android:text="@string/activity_selector_btn_bicicleta"></Button>
	</TableRow>
	<TableRow android:layout_height="30dip" android:layout_width="fill_parent"
		android:id="@+id/activity_selector_row_separador">
	</TableRow>
	<TableRow android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:id="@+id/activity_selector_row_config">
		<Button android:id="@+id/activity_selector_btn_config"
			android:textSize="20dip" android:layout_height="wrap_content"
			android:layout_width="fill_parent" android:text="@string/btn_user_settings"></Button>
	</TableRow>

</LinearLayout>
