<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="80dip"
                android:minWidth="80dip"
                android:text="@string/txt_username" />

            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:inputType="text" android:focusable="false"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="80dip"
                android:minWidth="80dip"
                android:text="@string/txt_password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:password="true"
                android:singleLine="true" 
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip" >

            <TextView
                android:id="@+id/txt_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="80dip"
                android:minWidth="80dip"
                android:text="@string/txt_height" >
            </TextView>

            <EditText
                android:id="@+id/edit_txt_height"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_enter_height"
                android:inputType="numberDecimal" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip" >

            <TextView
                android:id="@+id/txt_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="80dip"
                android:minWidth="80dip"
                android:text="@string/txt_weight" >
            </TextView>

            <EditText
                android:id="@+id/edit_txt_weight"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_enter_weight"
                android:inputType="numberDecimal" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginRight="5dip" >

            <TextView
                android:id="@+id/txt_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="80dip"
                android:minWidth="80dip"
                android:text="@string/txt_dob" >
            </TextView>

            <EditText
                android:id="@+id/dob"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="date" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginRight="5dip" >

            <TextView
                android:id="@+id/txt_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="80dip"
                android:minWidth="80dip"
                android:text="@string/txt_sex" >
            </TextView>

            <RadioGroup
                android:id="@+id/radio_group_sex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radio_sex_man"
                    android:text="@string/radio_sex_man" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/radio_sex_woman"
                    android:text="@string/radio_sex_woman" >
                </RadioButton>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip" >

            <Button
                android:id="@+id/register_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_guardar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip" >

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancelar" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>