<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="80dip"
                android:minWidth="80dip"
                android:text="@string/txt_username" />

            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="80dip"
                android:minWidth="80dip"
                android:text="@string/txt_password" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:password="true"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip" >

            <TextView
                android:id="@+id/txt_secret_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="80dip"
                android:minWidth="80dip"
                android:text="@string/txt_secret_question" >
            </TextView>

            <EditText
                android:id="@+id/secret_question"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_secret_question_detail"
                android:inputType="text" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginRight="5dip" >

            <TextView
                android:id="@+id/txt_hint_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="80dip"
                android:minWidth="80dip"
                android:text="@string/txt_hint_check" >
            </TextView>

            <EditText
                android:id="@+id/txt_hint"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="text" 
                android:hint="@string/txt_hint_check_detail">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginRight="5dip" >

            <TextView
                android:id="@+id/mandatory_fields"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FF0000"
                android:text="" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip" >

            <Button
                android:id="@+id/register_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_guardar" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dip"
            android:layout_marginRight="5dip" >

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_cancelar" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>